# fex

./: .gitignore  README.rst  fex.ipr  mypy.ini  pyproject.toml  setup.py
docs/: conf.py  index.rst
example/: data.jsonl  schema.json  template.html
fastex/: config.py  main.py  search.py  server.py  template.html  util.py
fastex/static/: fex.js  lbl.js
fastex/templates/: base.html  fex.yamale  fex.yaml  label.html  schema.json  template.html  view.html
fex/: main.py  template.html  view.html
